--- a/src/main/resources/com/example/algvisualizerjava/hello-view.fxml
+++ b/src/main/resources/com/example/algvisualizerjava/hello-view.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.algvisualizerjava.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.algvisualizerjava.HelloController">
+   <children>
+      <Text fx:id="algorithmName" layoutX="91.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Algoirthm Name" />
+      <TextFlow layoutX="75.0" layoutY="77.0" prefHeight="200.0" prefWidth="457.0">
+         <children>
+            <Text fx:id="algorithmExplanation" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithm Explanation" />
+         </children>
+      </TextFlow>
+      <HBox fx:id="rectangleContainer" alignment="BOTTOM_CENTER" layoutX="66.0" layoutY="337.0" prefHeight="373.0" prefWidth="654.0" />
+      <Button fx:id="sortButton" layoutX="654.0" layoutY="53.0" mnemonicParsing="false" onAction="#startSorting" text="Sort" />
+      <Button fx:id="resetButton" layoutX="650.0" layoutY="14.0" mnemonicParsing="false" onAction="#resetRectangleContainer" text="Reset" />
+   </children>
+</AnchorPane>
